add docker code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - /dev/video0:/dev/video0
     # 権限の有効化
     privileged: true
-    # command: python run.py
+    # command: python3 run.py
 
   nginx:
     container_name: nginx
